--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/galyverasi/diy-api-mongoose/issues"
   },
-  "homepage": "https://github.com/galyverasi/diy-api-mongoose#readme"
+  "homepage": "https://github.com/galyverasi/diy-api-mongoose#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.1.0"
+  }
 }
