--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chalk": "<5",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "rowdy-logger": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
