--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mogoose": "^0.0.1-security",
+    "mongoose": "^6.4.0",
     "react-router-dom": "^6.3.0"
   }
 }
