--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/aimeepham14/diy-api-mongoose#readme",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "mongoose": "^6.6.4"
   }
 }
