--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "diy-api-mongoose",
   "version": "1.0.0",
   "description": "## **Deliverable**:",
-  "main": "index.js",
+  "main": "intro.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
